# GKD_Vision

./: CMakeLists.txt  Readme.md  build.sh  cmakelists.txt  main.cpp  run.sh  todolist.md
GKD_Calibration/: CMakeLists.txt  README.md  build.sh  run.sh
GKD_Calibration/calibration/: cali_HIKdriver.cpp  cali_HIKdriver.hpp  calibrate_gkd.cpp  calibrate_gkd.hpp  calibrate_gkd_main.cpp  calibrate_parameter_gkd.cpp  calibrate_parameter_gkd.hpp
GKD_Calibration/configs/: gkd_calibrate_configs.yaml  gkd_camera_paramets.yaml
OpenRM2024-gkd/include/kalman/interface/: trackqueueV4.h
OpenRM2024-gkd/include/pointer/: pointer.h
TJURM-2024-gkd/include/garage/: wrapper_car.h
Visionlib/include/attack/: illustrate.md
Visionlib/include/logout/: message.h
Visionlib/include/logsys/: illustrate.md  message.h
Visionlib/include/solver/: illustrate.md  说明.md
Visionlib/include/structure/: illustrate.md
Visionlib/include/uniterm/: illustrate.md
Visionlib/include/video/: illustrate.md
Visionlib/src/datamanager/: parameterloader.cpp
Visionlib/src/uniterm/: message.cpp
Visionlib/src/video/: hikdriver.cpp
config/forward_config/: config.yaml
config/hero/: config.yaml
config/infantry/: config.yaml
config/sentry_l/: config.yaml
config/sentry_r/: config.yaml
data/uniconfig/: Config.json
include/: visionLib.h  visionlib.h
include/attack/: attack.h  deadlocker.h  filtrate.h  freshcenter.h
include/data_manager/: base.h  param.h  parameter_loader.h
include/datamanager/: parameterloader.h
include/debug/: error_calculator.h
include/garage/: garage.h  interface.h  wrapper_car.h  wrapper_rune.h  wrapper_tower.h
include/kalman/: kalman.h
include/kalman/filter/: ekf.h  kf.h
include/kalman/interface/: antitopV1.h  antitopV2.h  antitopV3.h  error_calculator.h  illustrate.md  outpostV1.h  outpostV2.h  runeV1.h  runeV2.h  trackqueueV1.h  trackqueueV2.h  trackqueueV3.h  trackqueueV4.h  trajectoryV1.h
include/kalman/interface/save for 7v7/: outpost.h  rune.h  trackqueueV3.h  trajectory.h
include/kalman/model/: ekf_center_model.h  ekf_single_model.h  kf_single_model.h
include/logsys/: illustrate.md  message.h
include/model/: rmyolov7_inference.h
include/model/yolov7/: rmyolov7-latest.xml
include/pointer/: illustrate.md  pointer.h  说明.md
include/solver/: polynomial.h  solvepnp.h  ternary.hpp  说明.md
include/structure/: cyclequeue.hpp  enums.hpp  slidestd.hpp  slideweighted.hpp  speedqueue.hpp  stamp.hpp
include/threads/: control.h  illustrate.md  pipeline.h
include/threads/control/: crc.h  structure.h
include/timer/: timer.hpp
include/utils/: delay.h  illustrate.md  print.h  serial.h  tf.h  timer.h
include/video/: hikdriver.h
src/data_manager/: init.cpp  param.cpp  parameter_loader.cpp
src/debug/: error_calculator.cpp
src/garage/: wrapper_car.cpp  wrapper_tower.cpp
src/kalman/: antitopV2.cpp  antitopV3.cpp  error_calculator.cpp  outpostV1.cpp  outpostV2.cpp  runeV1.cpp  runeV2.cpp  trackqueueV3.cpp  trackqueueV4.cpp  trajectoryV1.cpp
src/kalman/save for 7v7/: outpost.cpp  rune.cpp
src/logsys/: message.cpp
src/model/: rmyolov7_inference.cpp  rmyolov7inference.cpp
src/pointer/: color.cpp  getter.cpp  histogram.cpp  judge.cpp  reprojection.cpp  setter.cpp
src/send_control/: send_control.cpp
src/solver/: solvepnp.cpp
src/threads/: control.cpp  pipeline.cpp
src/threads/control/: receive_thread.cpp  send_thread.cpp
src/threads/pipeline/: image_thread.cpp  recording_thread.cpp  ui.cpp
src/threads/pipeline/baseline/: detector_thread.cpp  preprocessor_thread.cpp  tracker_thread.cpp
src/threads/pipeline/baseline/tracker/: locater.cpp  pointer.cpp
src/threads/pipeline/fourpoints/: detector_thread.cpp  fourpoints.cpp  preprocessor_thread.cpp
src/threads/pipeline/rune/: detector_thread.cpp  preprocessor_thread.cpp  tracker_thread.cpp
src/utils/: serial.cpp
src/video/: hikdriver.cpp
